--- a/index.html
+++ b/index.html
@@ -18,39 +18,43 @@
             color: white;
             overflow: hidden;
             text-align: center;
+            position: relative;
         }
 
-        .step { display: none; width: 90%; max-width: 400px; animation: fadeIn 0.8s ease; }
+        /* Flower Rain Style */
+        .flower {
+            position: absolute;
+            top: -50px;
+            font-size: 20px;
+            z-index: 100;
+            user-select: none;
+            pointer-events: none;
+            animation: fall linear infinite;
+        }
+
+        @keyframes fall {
+            to { transform: translateY(110vh) rotate(360deg); }
+        }
+
+        .step { display: none; width: 90%; max-width: 400px; animation: fadeIn 0.8s ease; z-index: 10; }
         .active { display: flex; flex-direction: column; align-items: center; }
 
         @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
 
-        /* Step 1: Gift Box */
+        /* Gift Box */
         .gift-box { font-size: 100px; cursor: pointer; animation: bounce 2s infinite; }
         @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-20px); } }
 
-        /* Titles */
         .title-gold { font-size: 28px; color: #ffd700; text-shadow: 0 0 10px #ff4d6d; margin-bottom: 20px; }
 
         /* Camera Frame */
-        #video-frame { width: 220px; height: 220px; border-radius: 50%; border: 6px solid #fff; overflow: hidden; margin: 20px 0; box-shadow: 0 0 25px #ff4d6d; }
+        #video-frame { width: 220px; height: 220px; border-radius: 50%; border: 6px solid #fff; overflow: hidden; margin: 20px 0; box-shadow: 0 0 25px #ff4d6d; background: #000; }
         video { width: 100%; height: 100%; object-fit: cover; transform: scaleX(-1); }
 
-        /* Rose Animation (FIXED) */
-        .rose-display {
-            font-size: 120px; /* Bada rose emoji */
-            filter: drop-shadow(0 0 20px #ff4d6d);
-            animation: heartBeat 1.5s infinite;
-            margin-bottom: 10px;
-        }
+        /* Final Rose Animation */
+        .rose-display { font-size: 120px; filter: drop-shadow(0 0 20px #ff4d6d); animation: heartBeat 1.5s infinite; margin-bottom: 10px; }
+        @keyframes heartBeat { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.15); } }
 
-        @keyframes heartBeat {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.15); }
-            100% { transform: scale(1); }
-        }
-
-        /* Message Box */
         .message-box { font-style: italic; font-size: 16px; line-height: 1.6; background: rgba(255,255,255,0.1); padding: 20px; border-radius: 20px; border: 1px solid rgba(255,255,255,0.2); }
 
         button {
@@ -64,9 +68,13 @@
 </head>
 <body>
 
+    <audio id="bgMusic" loop>
+        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    </audio>
+
     <div id="step1" class="step active">
-        <div class="gift-box" onclick="nextStep(2)">🎁</div>
-        <p style="margin-top: 20px; letter-spacing: 1px;">Aapke liye ek gift hai... Tap karein!</p>
+        <div class="gift-box" onclick="startApp()">🎁</div>
+        <p style="margin-top: 20px;">Aapke liye ek gift hai... Tap karein!</p>
     </div>
 
     <div id="step2" class="step">
@@ -84,44 +92,8 @@
     </div>
 
     <div id="step4" class="step">
-        <div class="rose-display">🌹</div> <p class="rose-text">For You.. 🌹</p>
+        <div class="rose-display">🌹</div>
+        <p class="rose-text">For You.. 🌹</p>
         <div class="message-box">
-            Love you so much motu. Love you khdusain. Love you love you beta ji love you soooooooo much. ❤️
-        </div>
-        <button onclick="nextStep(5)">One more thing...</button>
-    </div>
-
-    <div id="step5" class="step">
-        <div class="message-box" style="text-align: justify; font-size: 15px;">
-            Thanks for coming in my life and Thank you for giving me a place in your life. You are the most beautiful part of my life. You have made my whole life beautiful. I always want to be with you. I always want you to be with me.
-        </div>
-        <h2 style="margin-top: 30px; color: #ffd700; font-family: 'Dancing Script'; font-size: 35px;">Forever Yours ❤️</h2>
-    </div>
-
-    <audio id="bgMusic" loop>
-        <source src="https://drive.google.com/file/d/1rR-n7XemcinUm41sW5ZA16VoUhbTKisK/view?usp=drivesdk" type="audio/mpeg">
-    </audio>
-
-    <script>
-        function nextStep(stepNumber) {
-            document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-            document.getElementById('step' + stepNumber).classList.add('active');
+            Love you so much motu. Love you khdusain. Love you love you beta ji love you sooooo
             
-            if(stepNumber === 2) {
-                document.getElementById('bgMusic').play().catch(() => {});
-            }
-        }
-
-        async function openCamera() {
-            try {
-                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-                document.getElementById('webcam').srcObject = stream;
-                nextStep(3);
-            } catch (err) {
-                alert("Camera allow karein tabhi magic dikhega! ❤️");
-                nextStep(3);
-            }
-        }
-    </script>
-</body>
-</html>
