--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             position: relative;
         }
 
-        /* Flowers Rain (Everlasting) */
+        /* Flowers Rain */
         .flower {
             position: absolute;
             top: -50px;
@@ -34,7 +34,6 @@
             to { transform: translateY(110vh) rotate(360deg); }
         }
 
-        /* Steps Management */
         .step { 
             display: none; 
             width: 90%; 
@@ -48,7 +47,7 @@
 
         @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
 
-        /* Step 1: Big Gift Box */
+        /* Gift Box */
         .gift-box { 
             font-size: 120px; 
             cursor: pointer; 
@@ -67,14 +66,12 @@
 
         .title-gold { font-size: 28px; color: #ffd700; text-shadow: 0 0 10px #ff4d6d; margin-bottom: 20px; }
 
-        /* Camera Section */
         #video-frame { 
             width: 200px; height: 200px; border-radius: 50%; border: 6px solid #fff; 
             overflow: hidden; margin: 20px 0; box-shadow: 0 0 25px #ff4d6d; background: #000; 
         }
         video { width: 100%; height: 100%; object-fit: cover; transform: scaleX(-1); }
 
-        /* Final Rose */
         .rose-display { font-size: 100px; animation: heartBeat 1.5s infinite; margin-bottom: 10px; }
         @keyframes heartBeat { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }
 
@@ -91,9 +88,9 @@
         .rose-text { font-family: 'Dancing Script', cursive; font-size: 32px; color: #ff4d6d; }
     </style>
 </head>
-<body onclick="playMusicOnce()">
+<body onclick="playMusic()">
 
-    <audio id="bgMusic" loop>
+    <audio id="bgMusic" loop preload="auto">
         <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
     </audio>
 
@@ -131,14 +128,11 @@
     </div>
 
     <script>
-        let musicStarted = false;
+        const music = document.getElementById('bgMusic');
 
-        function playMusicOnce() {
-            if (!musicStarted) {
-                const music = document.getElementById('bgMusic');
-                music.play().catch(() => {});
-                musicStarted = true;
-            }
+        function playMusic() {
+            // Force play and ensure it keeps looping
+            music.play().catch(() => {});
         }
 
         function createFlower() {
@@ -156,22 +150,22 @@
         function nextStep(n) {
             document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
             document.getElementById('step' + n).classList.add('active');
-            window.scrollTo(0,0);
+            playMusic(); // Ensure music is still playing on next step
         }
 
         function goToStep2(e) {
-            e.stopPropagation(); // Click conflict rokne ke liye
-            playMusicOnce();
+            e.stopPropagation();
+            playMusic();
             nextStep(2);
         }
 
         async function openCamera() {
+            playMusic();
             try {
                 const stream = await navigator.mediaDevices.getUserMedia({ video: true });
                 document.getElementById('webcam').srcObject = stream;
                 nextStep(3);
             } catch (err) {
-                alert("Camera allow karein tabhi surprise dikhega! ❤️");
                 nextStep(3);
             }
         }
