--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             to { transform: translateY(110vh) rotate(360deg); }
         }
 
+        /* Steps */
         .step { 
             display: none; 
             width: 90%; 
@@ -47,127 +48,10 @@
 
         @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
 
-        /* Gift Box */
+        /* Gift Box Step 1 */
         .gift-box { 
-            font-size: 120px; 
-            cursor: pointer; 
-            animation: shake 1.5s infinite; 
-            display: inline-block;
-            user-select: none;
-            -webkit-tap-highlight-color: transparent;
+            font-size: 120px; cursor: pointer; animation: shake 1.5s infinite; 
+            display: inline-block; user-select: none; -webkit-tap-highlight-color: transparent;
         }
         @keyframes shake {
-            0%, 100% { transform: rotate(0deg); }
-            20% { transform: rotate(-10deg); }
-            40% { transform: rotate(10deg); }
-            60% { transform: rotate(-10deg); }
-            80% { transform: rotate(10deg); }
-        }
-
-        .title-gold { font-size: 28px; color: #ffd700; text-shadow: 0 0 10px #ff4d6d; margin-bottom: 20px; }
-
-        #video-frame { 
-            width: 200px; height: 200px; border-radius: 50%; border: 6px solid #fff; 
-            overflow: hidden; margin: 20px 0; box-shadow: 0 0 25px #ff4d6d; background: #000; 
-        }
-        video { width: 100%; height: 100%; object-fit: cover; transform: scaleX(-1); }
-
-        .rose-display { font-size: 100px; animation: heartBeat 1.5s infinite; margin-bottom: 10px; }
-        @keyframes heartBeat { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }
-
-        .message-box { 
-            font-style: italic; font-size: 16px; line-height: 1.6; background: rgba(255,255,255,0.1); 
-            padding: 20px; border-radius: 20px; border: 1px solid rgba(255,255,255,0.2); 
-        }
-
-        .btn-next {
-            margin-top: 25px; padding: 15px 45px; font-size: 18px; border: none; border-radius: 50px;
-            background: linear-gradient(45deg, #ffd700, #ff8c00); color: #000; font-weight: bold; cursor: pointer;
-        }
-
-        .rose-text { font-family: 'Dancing Script', cursive; font-size: 32px; color: #ff4d6d; }
-    </style>
-</head>
-<body onclick="playMusic()">
-
-    <audio id="bgMusic" loop preload="auto">
-        <source src="https://docs.google.com/uc?export=download&id=1kDKQbCLJkJOX4kyh0ZOFiSEu6_Pj3aH1" type="audio/mpeg">
-    </audio>
-
-    <div id="step1" class="step active">
-        <div class="gift-box" onclick="goToStep2(event)">🎁</div>
-        <p style="margin-top: 20px; font-weight: bold;">Tap on Gift Box to Open!</p>
-    </div>
-
-    <div id="step2" class="step">
-        <h1 class="title-gold">Best thing about 2025... ✨🌹</h1>
-        <button class="btn-next" onclick="openCamera()">OPEN</button>
-    </div>
-
-    <div id="step3" class="step">
-        <h1 class="title-gold" style="color: #00ff6a;">Of course YOU!</h1>
-        <div id="video-frame">
-            <video id="webcam" autoplay playsinline></video>
-        </div>
-        <div class="message-box">Hmesa sath rhna motu . Me chahta hu life ka har saal tmhare sth suru ho or tum pr hi khtm .. I need you .</div>
-        <button class="btn-next" onclick="nextStep(4)">Next ❤️</button>
-    </div>
-
-    <div id="step4" class="step">
-        <div class="rose-display">🌹</div>
-        <p class="rose-text">For You.. 🌹</p>
-        <div class="message-box">Love you so much motu. Love you khdusain. Love you love you beta ji love you soooooooo much. ❤️</div>
-        <button class="btn-next" onclick="nextStep(5)">One more thing...</button>
-    </div>
-
-    <div id="step5" class="step">
-        <div class="message-box" style="text-align: justify;">
-            Thanks for coming in my life and Thank you for giving me a place in your life. You are the most beautiful part of my life. You have made my whole life beautiful. I always want to be with you. I always want you to be with me.
-        </div>
-        <h2 style="margin-top: 30px; color: #ffd700; font-family: 'Dancing Script'; font-size: 35px;">Forever Yours ❤️</h2>
-    </div>
-
-    <script>
-        const music = document.getElementById('bgMusic');
-
-        function playMusic() {
-            music.play().catch((e) => { console.log("Playback error", e) });
-        }
-
-        function createFlower() {
-            const flower = document.createElement('div');
-            const types = ['🌹', '🌸', '❤️', '✨'];
-            flower.className = 'flower';
-            flower.innerHTML = types[Math.floor(Math.random() * types.length)];
-            flower.style.left = Math.random() * 100 + 'vw';
-            flower.style.animationDuration = (Math.random() * 3 + 2) + 's';
-            document.body.appendChild(flower);
-            setTimeout(() => { flower.remove(); }, 5000);
-        }
-        setInterval(createFlower, 400);
-
-        function nextStep(n) {
-            document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-            document.getElementById('step' + n).classList.add('active');
-            playMusic(); 
-        }
-
-        function goToStep2(e) {
-            e.stopPropagation();
-            playMusic();
-            nextStep(2);
-        }
-
-        async function openCamera() {
-            playMusic();
-            try {
-                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-                document.getElementById('webcam').srcObject = stream;
-                nextStep(3);
-            } catch (err) {
-                nextStep(3);
-            }
-        }
-    </script>
-</body>
-</html>
+            
