--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body onclick="handleGlobalClick(event)">
 
     <audio id="bgMusic" loop preload="auto">
-        <source src="https://docs.google.com/uc?export=download&id=1kDKQbCLJkJOX4kyh0ZOFiSEu6_Pj3aH1" type="audio/mpeg">
+        <source src="https://drive.google.com/file/d/1kDKQbCLJkJOX4kyh0ZOFiSEu6_Pj3aH1/view?usp=drivesdk" type="audio/mpeg">
     </audio>
 
     <div id="step1" class="step active">
