--- a/index.html
+++ b/index.html
@@ -6,61 +6,45 @@
     <title>A Special Gift For You ✨</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;600&display=swap');
-
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            background: radial-gradient(circle, #2b001e, #000);
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: 'Poppins', sans-serif;
-            color: white;
-            overflow: hidden;
-            text-align: center;
-            position: relative;
-        }
+        body { background: radial-gradient(circle, #2b001e, #000); height: 100vh; display: flex; justify-content: center; align-items: center; font-family: 'Poppins', sans-serif; color: white; overflow: hidden; text-align: center; position: relative; }
 
         /* Flower Rain */
         .flower { position: absolute; top: -50px; font-size: 20px; z-index: 100; pointer-events: none; animation: fall linear infinite; }
         @keyframes fall { to { transform: translateY(110vh) rotate(360deg); } }
 
-        /* Steps */
+        /* Steps Management */
         .step { display: none; width: 90%; max-width: 400px; animation: fadeIn 0.8s ease; z-index: 10; flex-direction: column; align-items: center; }
         .active { display: flex !important; }
         @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
 
-        /* Gift Box */
-        .gift-box { font-size: 120px; cursor: pointer; animation: shake 1.5s infinite; display: inline-block; }
+        /* Gift Box Step 1 */
+        .gift-box { font-size: 120px; cursor: pointer; animation: shake 1.5s infinite; display: inline-block; -webkit-tap-highlight-color: transparent; }
         @keyframes shake { 0%, 100% { transform: rotate(0deg); } 20% { transform: rotate(-10deg); } 40% { transform: rotate(10deg); } 60% { transform: rotate(-10deg); } 80% { transform: rotate(10deg); } }
 
-        /* Video Frame */
         #video-frame { width: 200px; height: 200px; border-radius: 50%; border: 6px solid #fff; overflow: hidden; margin: 20px 0; box-shadow: 0 0 25px #ff4d6d; background: #000; }
         video { width: 100%; height: 100%; object-fit: cover; transform: scaleX(-1); }
 
-        /* Message Box with Typing Animation */
-        .message-box { font-style: italic; font-size: 16px; line-height: 1.6; background: rgba(255,255,255,0.1); padding: 20px; border-radius: 20px; border: 1px solid rgba(255,255,255,0.2); min-height: 100px; }
+        .message-box { font-style: italic; font-size: 16px; line-height: 1.6; background: rgba(255,255,255,0.1); padding: 20px; border-radius: 20px; border: 1px solid rgba(255,255,255,0.2); min-height: 80px; }
+        .btn-next { margin-top: 25px; padding: 15px 45px; font-size: 18px; border: none; border-radius: 50px; background: linear-gradient(45deg, #ffd700, #ff8c00); color: #000; font-weight: bold; cursor: pointer; box-shadow: 0 5px 20px rgba(255,215,0,0.5); }
 
-        .btn-next { margin-top: 25px; padding: 15px 45px; font-size: 18px; border: none; border-radius: 50px; background: linear-gradient(45deg, #ffd700, #ff8c00); color: #000; font-weight: bold; cursor: pointer; }
-
-        /* Countdown Style */
-        #countdown { font-size: 20px; color: #ffd700; margin-bottom: 15px; font-weight: bold; }
-        .year-2026 { font-size: 70px; font-weight: 900; background: linear-gradient(to bottom, #fff, #ffd700); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-
-        /* Click Sparkle */
-        .sparkle { position: absolute; pointer-events: none; animation: spark 1s forwards; font-size: 20px; }
+        /* Sparkle Hearts */
+        .sparkle { position: absolute; pointer-events: none; animation: spark 1s forwards; font-size: 20px; z-index: 999; }
         @keyframes spark { 0% { transform: scale(0); opacity: 1; } 100% { transform: scale(2) translateY(-50px); opacity: 0; } }
+
+        .year-2026 { font-size: 70px; font-weight: 900; background: linear-gradient(to bottom, #fff, #ffd700); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
     </style>
 </head>
-<body onclick="handleGlobalClick(event)">
+<body onclick="startMusic()">
 
     <audio id="bgMusic" loop preload="auto">
         <source src="https://docs.google.com/uc?export=download&id=1kDKQbCLJkJOX4kyh0ZOFiSEu6_Pj3aH1" type="audio/mpeg">
+        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
     </audio>
 
     <div id="step1" class="step active">
         <div class="gift-box" onclick="goToStep2(event)">🎁</div>
-        <p style="margin-top: 20px;">Tumhare liye kuch hai... Khola kya? ❤️</p>
+        <p style="margin-top: 20px;">Open your gift! ❤️</p>
     </div>
 
     <div id="step2" class="step">
@@ -71,92 +55,73 @@
     <div id="step3" class="step">
         <h1 style="color:#00ff6a">Of course YOU!</h1>
         <div id="video-frame"><video id="webcam" autoplay playsinline></video></div>
-        <div class="message-box" id="typewriter1"></div>
+        <div class="message-box" id="type1"></div>
         <button class="btn-next" onclick="nextStep(4)">Next ❤️</button>
     </div>
 
     <div id="step4" class="step">
         <div style="font-size:100px; animation: heartBeat 1.5s infinite;">🌹</div>
         <h2 style="font-family:'Dancing Script'; color:#ff4d6d">For You..</h2>
-        <div class="message-box" id="typewriter2"></div>
+        <div class="message-box" id="type2"></div>
         <button class="btn-next" onclick="nextStep(5)">One more thing...</button>
     </div>
 
     <div id="step5" class="step">
-        <div class="message-box" id="typewriter3" style="text-align: justify;"></div>
+        <div class="message-box" id="type3" style="text-align: justify;"></div>
         <button class="btn-next" onclick="nextStep(6)">Ready for 2026? 🎇</button>
     </div>
 
     <div id="step6" class="step">
-        <div id="countdown">Loading Countdown...</div>
         <h1 style="font-family:'Dancing Script'; font-size:40px; color:#ffd700">Happy New Year</h1>
         <div class="year-2026">2026</div>
-        <p style="margin-top:20px;">May our bond grow stronger! 🥂❤️</p>
+        <p style="margin-top:20px;">I always want you to be with me. ❤️</p>
     </div>
 
     <script>
         const music = document.getElementById('bgMusic');
-        
-        // Typing Effect Logic
-        function typeWriter(text, elementId, speed = 50) {
-            let i = 0;
-            const element = document.getElementById(elementId);
-            element.innerHTML = "";
-            function type() {
-                if (i < text.length) {
-                    element.innerHTML += text.charAt(i);
-                    i++;
-                    setTimeout(type, speed);
-                }
+        let musicStarted = false;
+
+        function startMusic() {
+            if (!musicStarted) {
+                music.play().then(() => { musicStarted = true; }).catch(e => console.log("Music waiting for interaction"));
             }
+        }
+
+        // Click Sparkle
+        document.body.addEventListener('click', (e) => {
+            const s = document.createElement('div');
+            s.className = 'sparkle'; s.innerHTML = '❤️';
+            s.style.left = e.pageX + 'px'; s.style.top = e.pageY + 'px';
+            document.body.appendChild(s);
+            setTimeout(() => s.remove(), 1000);
+        });
+
+        function typeEffect(txt, id) {
+            let i = 0; const el = document.getElementById(id); el.innerHTML = "";
+            function type() { if(i < txt.length) { el.innerHTML += txt.charAt(i); i++; setTimeout(type, 50); } }
             type();
         }
 
-        // Countdown Logic
-        function updateCountdown() {
-            const now = new Date().getTime();
-            const nextYear = new Date("Jan 1, 2026 00:00:00").getTime();
-            const diff = nextYear - now;
-            const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-            const hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const mins = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-            document.getElementById("countdown").innerHTML = `${days}d ${hours}h ${mins}m to go...`;
-        }
-        setInterval(updateCountdown, 1000);
-
-        function handleGlobalClick(e) {
-            // Sparkle effect
-            const sparkle = document.createElement('div');
-            sparkle.className = 'sparkle';
-            sparkle.innerHTML = '❤️';
-            sparkle.style.left = e.pageX + 'px';
-            sparkle.style.top = e.pageY + 'px';
-            document.body.appendChild(sparkle);
-            setTimeout(() => sparkle.remove(), 1000);
-            music.play().catch(() => {});
-        }
-
         function createFlower() {
-            const flower = document.createElement('div');
-            flower.className = 'flower';
-            flower.innerHTML = ['🌹', '❤️', '✨'][Math.floor(Math.random()*3)];
-            flower.style.left = Math.random() * 100 + 'vw';
-            flower.style.animationDuration = (Math.random()*3+2)+'s';
-            document.body.appendChild(flower);
-            setTimeout(() => flower.remove(), 5000);
+            const f = document.createElement('div'); f.className = 'flower';
+            f.innerHTML = ['🌹', '❤️', '✨'][Math.floor(Math.random()*3)];
+            f.style.left = Math.random()*100+'vw'; f.style.animationDuration = (Math.random()*3+2)+'s';
+            document.body.appendChild(f);
+            setTimeout(() => f.remove(), 5000);
         }
         setInterval(createFlower, 400);
 
         function nextStep(n) {
             document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
             document.getElementById('step' + n).classList.add('active');
-            
-            if(n === 3) typeWriter("Hmesa sath rhna motu . Me chahta hu life ka har saal tmhare sth suru ho or tum pr hi khtm .. I need you .", "typewriter1");
-            if(n === 4) typeWriter("Love you so much motu. Love you khdusain. Love you love you beta ji love you soooooooo much. ❤️", "typewriter2");
-            if(n === 5) typeWriter("Thanks for coming in my life and Thank you for giving me a place in your life. You are the most beautiful part of my life. I always want to be with you.", "typewriter3");
+            music.play(); // Step change par bhi force play
+
+            if(n === 3) typeEffect("Hmesa sath rhna motu . Me chahta hu life ka har saal tmhare sth suru ho or tum pr hi khtm .. I need you .", "type1");
+            if(n === 4) typeEffect("Love you so much motu. Love you khdusain. Love you love you beta ji love you soooooooo much. ❤️", "type2");
+            if(n === 5) typeEffect("Thanks for coming in my life and Thank you for giving me a place in your life. You are the most beautiful part of my life.", "type3");
         }
 
-        function goToStep2(e) { e.stopPropagation(); music.play(); nextStep(2); }
+        function goToStep2(e) { e.stopPropagation(); startMusic(); nextStep(2); }
 
         async function openCamera() {
             try {
