--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body onclick="startMusic()">
 
     <audio id="mySong" loop>
-        <source src="https://docs.google.com/uc?export=download&id=1kDKQbCLJkJOX4kyh0ZOFiSEu6_Pj3aH1" type="audio/mpeg">
+        <source src="https://www.dropbox.com/scl/fi/6uqh9i9df9lffrkl1tg25/instrumental-Flute-Version-Tujh-Mein-Rab-Dikhta-Hai-Rab-Ne-Bana-Di-Jodi-Aykronix-Release.mp3?rlkey=v6gd5ggdm3v9gxarlcmnvvufz&st=07d36vjf&dl=0" type="audio/mpeg">
     </audio>
 
     <div id="step1" class="step active">
